Start wave debugger, contrast and labels bugs fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,7 @@ body {
  
 .header-text {
     font-family: 'Syne Mono', monospace;
+    font-size: 55px;
     color: #5B5C50;
     text-shadow: 2px 2px 5px red;
 }
@@ -143,8 +144,8 @@ nav.nav-center ul li a {
         height: 50vh;
 }
 
-.p-t-search {
-    padding-top: 4%;
+#home-header {
+    font-size: 35px;
 }
 
 /* -------------------------------------- Footer*/
@@ -152,6 +153,11 @@ nav.nav-center ul li a {
 #footer-logo, .error-logo {
     height: 100px;
     width: 100px;
+}
+
+#copywrite {
+    color: whitesmoke;
+    text-shadow: 2px 2px 5px rgb(31, 56, 198);
 }
 
 /* ------------------------------------- Submit btn form */
@@ -163,13 +169,15 @@ input::placeholder, .input-field>label {
     font-weight: bold;
 }
 
-.sub-btn, #back-btn, #review-now {
+.sub-btn, #back-btn, #review-now,
+.search-btn, .reset-btn:hover {
     background-color: rgba(70, 68, 68, 0.85);
     filter: brightness(130%);
     box-shadow : 0 4px 8px 0 rgb(31, 56, 198), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.sub-btn:hover, #back-btn:hover, #review-now:hover {
+.sub-btn:hover, #back-btn:hover, #review-now:hover,
+.search-btn:hover, .reset-btn {
     background-color: rgba(40, 39, 39, 0.85);
     filter: brightness(130%);
     box-shadow : 0 4px 8px 0 rgba(208, 17, 16, 1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -216,6 +224,13 @@ nav {
 .dropdown-content li>span {
     background-color: rgba(91, 92, 80, 0.75);
     color: white;
+}
+
+#query {
+    background-color: whitesmoke;
+    border: grey;
+    border-radius: 25px;
+    box-shadow: 0 4px 8px 0 rgb(31, 56, 198,1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 /* ----------------------------------------- Add_review.html */
